7/24/2011
	- 2.1.2 released

6/9/2011
	- TypeBitmap.toString() failed if no bits were set.
	  (patch from Jeffrey Damick <Jeffrey.Damick@neustar.biz>)

5/24/2011
	- TSIG.fromString() didn't handle base64-encoded secrets with /
	  characters. (reported by Sten <stennordstrom@users.sourceforge.net>)

5/12/2011
	- Support verifying truncated TSIG signatures, as specified in RFC
	  4635.

5/10/2011
	- Refactor EDNS Option support to allow for custom type
	  implementations, and add support for the Client Subnet option.
	  (based on a patch from Ming Zhou <mizhou@bnivideo.com>)

	- Add support for the NSID EDNS option.

4/20/2011
	- Add missing support for the HMAC-SHA224, HMA-SHA384, and HMAC-SHA384
	  TSIG algorithms. (patch from Thomas Corte <Thomas.Corte@knipp.de>)

3/9/2011
	- Add support for using alternate JCA providers when generating DNSSEC
	  signatures (patch from Jeffrey Damick <Jeffrey.Damick@neustar.biz>)

2/9/2011
	- 2.1.1 released

2/3/2011
	- Add the ability to set ndots on Lookup objects, and parse the ndots
	  option from a resolv.conf file (patch from Oleg Tsvinev
	  <Oleg.Tsvinev@Reardencommerce.com>).

2/3/2011
	- The 'file' command in the 'update' program didn't work correctly.
	  (reported by Olafur Gudmundsson <ogud@ogud.com>)

9/15/2010
	- Change the Android name server detection mechanism to avoid false
	  positives. (patch from Ulf Dittmer)

9/9/2010
	- The IXFR code didn't do serial number arithmetic correctly, and would
	  fail if the serial number wrapped.
	  (patch from Alexis MacFarlane <Alexis.MacFarlane@usc-bt.com>)

9/7/2010
	- 2.1.0 released

8/17/2010
	- When rendering a message, if records from the additional section did
	  not fit, the header counts were not properly updated.
	  (patch from Klaus Malorny <Klaus.Malorny@knipp.de>)

7/22/2010
	- Fix LOC record parsing to allow negative altitudes.
	  (based on a patch from William Kocik <wkocik@verisign.com>)

7/21/2010